--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "llms-py"
-version = "1.0.3"
+version = "2.0.5"
 description = "A lightweight CLI tool and OpenAI-compatible server for querying multiple Large Language Model (LLM) providers"
 readme = "README.md"
 license = "BSD-3-Clause"
@@ -53,4 +53,4 @@ llms = "llms:main"
 py-modules = ["llms"]
 
 [tool.setuptools.package-data]
-"*" = ["llms.json", "README.md", "LICENSE", "requirements.txt"]
+"*" = ["llms.json", "README.md", "LICENSE", "requirements.txt", "index.html", "ui/**/*"]
