--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,4 @@
 include README.md
 include LICENSE
 include requirements.txt
-include llms.json
-include index.html
-include ui.json
-recursive-include ui *
+recursive-include llms *
