--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "llms-py"
-version = "2.0.14"
+version = "2.0.15"
 description = "A lightweight CLI tool and OpenAI-compatible server for querying multiple Large Language Model (LLM) providers"
 readme = "README.md"
 license = "BSD-3-Clause"
@@ -47,10 +47,10 @@ Repository = "https://github.com/ServiceStack/llms"
 "Bug Reports" = "https://github.com/ServiceStack/llms/issues"
 
 [project.scripts]
-llms = "llms:main"
+llms = "llms.main:main"
 
 [tool.setuptools]
-py-modules = ["llms"]
+packages = ["llms"]
 
 [tool.setuptools.package-data]
-"*" = ["llms.json", "README.md", "LICENSE", "requirements.txt", "index.html", "ui/**/*"]
+llms = ["index.html", "llms.json", "ui.json", "ui/*", "ui/lib/*"]
