--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,7 +2,10 @@ version: '3.8'
 
 services:
   llms:
-    image: ghcr.io/servicestack/llms:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: llms-py:latest
     container_name: llms-py
     ports:
       - "8000:8000"
@@ -20,9 +23,18 @@ services:
       - ZAI_API_KEY=${ZAI_API_KEY:-}
       - MISTRAL_API_KEY=${MISTRAL_API_KEY:-}
     volumes:
-      # Maintain user-modifiable config files outside the container
-      # llms.json and ui.json will be auto-created on first run
-      - ~/.llms:/home/llms/.llms
+      # Persist configuration and analytics data
+      # The container will auto-create llms.json and ui.json on first run
+      - llms-data:/home/llms/.llms
+
+      # Alternative: Mount a local directory to use custom config files
+      # Uncomment the line below and comment out the line above to use local configs
+      # Place your custom llms.json and ui.json in ./config/ directory
+      # - ./config:/home/llms/.llms
+
+      # Alternative: Mount individual config files (read-only recommended)
+      # - ./my-llms.json:/home/llms/.llms/llms.json:ro
+      # - ./my-ui.json:/home/llms/.llms/ui.json:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000').read()"]
@@ -30,3 +42,8 @@ services:
       timeout: 10s
       retries: 3
       start_period: 5s
+
+volumes:
+  llms-data:
+    driver: local
+
