Create npm scripts to bump and create new releases

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
-        "test": "python -m unittest discover -s tests -p 'test_*.py'"
+        "test": "python -m unittest discover -s tests -p 'test_*.py'",
+        "build": "python publish.py --build --prod",
+        "bump": "python publish.py --bump",
+        "release": "python publish.py --release"
     }
 }
