--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "scripts": {
         "test": "python -m unittest discover -s tests -p 'test_*.py'",
         "build": "python publish.py --build --prod",
+        "version": "python -c \"from publish import get_current_version; print(get_current_version())\"",
         "bump": "python publish.py --bump",
         "release": "python publish.py --release"
     }
