add tailwind scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "scripts": {
         "test": "python -m unittest discover -s tests -p 'test_*.py'",
+        "ui:dev": "tailwindcss -i ./llms/ui/tailwind.input.css -o ./llms/ui/app.css --watch",
+        "ui:build": "tailwindcss -i ./llms/ui/tailwind.input.css -o ./llms/ui/app.css --minify",
         "build": "python publish.py --build --prod",
         "version": "python -c \"from publish import get_current_version; print(get_current_version())\"",
         "bump": "python publish.py --bump",
