--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "llms-py"
-version = "3.0.0b6"
+version = "3.0.0b7"
 description = "A lightweight CLI tool and OpenAI-compatible server for querying multiple Large Language Model (LLM) providers"
 readme = "README.md"
 license = "BSD-3-Clause"
@@ -53,7 +53,7 @@ llms = "llms.main:main"
 packages = ["llms"]
 
 [tool.setuptools.package-data]
-llms = ["index.html", "llms.json", "providers.json", "providers-extra.json", "providers/*", "ui/*", "ui/modules/*", "ui/lib/*"]
+llms = ["index.html", "llms.json", "providers.json", "providers-extra.json", "extensions/**/*", "ui/**/*"]
 
 [tool.ruff]
 # Set the target Python version
