--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -29,6 +28,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+lib/
+!llms/ui/lib/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
